# Senstosalesv2.0

./: .gitignore  .project-config.json  1105097.html  APP_ANALYSIS.md  CHANGELOG.md  LICENSE  README.md  STABILIZATION_PLAN.md  SYSTEM_BIBLE.md  architecture-manifest.yaml  audit_report.md  audit_results.txt  backend_critical_errors.json  backend_errors.txt  debug_reconcile.py  design-tokens.json  eslint_report.txt  excel_dump.txt  fix_all_deliveries.py  fix_imports.py  guardrails-spec.json  guardrails.json  init_settings.py  inspect_db.py  inspect_excel.py  inspect_schema.py  issues.json  list_tables.py  map_excel.py  master_prompt.md  mcp_config.json  production_readiness_report.json  pyproject.toml  repro_crash.py  repro_srv_crash_1105181.py  repro_srv_error.py  requirements.txt  run_agent.py  schema_log.txt  sync_hwm.py  (+4 more)
.mcp/: config.json
backend/: db_check.py  entry_point.py  inspect_buyers.py  inspect_final.py  inspect_html.py  inspect_invoice.py  inspect_live.py  inspect_rc_no.py  inspect_refined.py  inspect_schema.py  main.py  production_readiness_report.json  pyproject.toml  requirements.txt  run_db_update.py  verify_po_list.py  verify_scraper.py
backend/audits/: docs-server.js  eslint-output.txt  production_audit_suite.py  pyproject.toml  requirements.txt  ruff-output.json  run_production_audit.py
backend/audits/code-quality/lint-audit/: run.py
backend/audits/data-integrity/: server.py
backend/audits/data-integrity/business-audit/: __init__.py  server.py
backend/audits/performance/: dark_theme_audit_report.json
db/: database
docs/: API_REFERENCE.md  (+11 more)
(+428 files in other folders)
