[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "senstosales-mcp-servers"
version = "1.0.0"
description = "MCP audit servers for SenstoSales ERP"
requires-python = ">=3.9"
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["database-audit*", "api-audit*", "security-audit*", "business-audit*", "lint-audit*", "ui-audit*"]
